fix: hide scrollbar

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,5 @@
+html { overflow-y: hidden; }
+
 body {
   cursor: url('../assets/cursor/yugicursor.png'), default;
 }
